tests/machine/x/c/for_map_collection.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/for_map_collection.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/for_map_collection.c:21:28: error: ‘mItem’ has no member named ‘len’
   21 |   for (int _t1 = 0; _t1 < m.len; _t1++) {
      |                            ^
/workspace/mochi/tests/machine/x/c/for_map_collection.c:22:14: error: ‘mItem’ has no member named ‘data’
   22 |     int k = m.data[_t1];
      |              ^

   1: #include <stdio.h>
